# hexapod

./: .gitignore  README.md
hexapod_bringup/config/: hexapod_gazebo.yaml  quadruped_gazebo_sitl.yaml
hexapod_bringup/scripts/: quadruped.lua
hexapod_description/models/hexapod/: model.config  model.sdf
hexapod_description/models/quadruped/: model.config  model.sdf
hexapod_doc/: walking_algorithim.md
hexapod_gazebo/: CMakeLists.txt
hexapod_gazebo/plugins/: pexod_plugin.cc
hexapod_gazebo/worlds/: hexapod.sdf
hexapod_sim/: README.md  requirements.txt
hexapod_sim/examples/: 3dgraph.ipynb  3dgraph.py  Untitled.ipynb  Untitled1.ipynb  plot1.ipynb  widget_demo1.ipynb
hexapod_sim/hexapod_sim/: kinematics.py  sim.ipynb
